--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,6 @@
 @import "layouts/index";
 @import "components/index";
 @import "pages/index";
+@import "restaurants/index";
+
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script|Dosis:200|Lobster|Pacifico|Quicksand:300');
