--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,18 +1,28 @@
 /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: #545454;
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-/* Logo */
-.navbar-wagon-brand img {
-  height: 50px;
+  .logo {
+    color: darkseagreen;
+    margin-left: 44px;
+  }
+  .logo:hover, .logo-text:hover {
+    color: #70a570;
+    text-decoration: none;
+  }
+  .logo-text {
+    font-family: 'Dancing Script', cursive;
+    font-size: 40px;
+    color: darkseagreen;
+    padding-left: 10px;
+    margin-left: -5px;
+  }
 }
 
 /* User Avatar */
@@ -37,8 +47,9 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
-  font-size: 14px;
+  color: white;
+  font-size: 20px;
+  font-family: 'Quicksand', sans-serif;
 }
 .navbar-wagon-link:hover {
   color: #da552f;
