--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,15 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <i class="fa fa-cutlery fa-2x" aria-hidden="true"></i>
+  <div class="page-logo">
+    <%= link_to "", restaurants_path, class: "fa fa-cutlery fa-2x logo" %>
+    <%= link_to "The Top Restaurants", restaurants_path, class: "logo-text" %>
+
+  </div>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
     <!-- Links -->
-    <%= link_to "Host", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-    <%= link_to "Trips", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-    <%= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "Add new restaurant", new_restaurant_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Avatar with dropdown menu -->
@@ -16,11 +17,6 @@
       <div class="dropdown">
         <%= image_tag "http://placehold.it/30x30", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li>
-            <%= link_to "#" do %>
-            <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-            <% end %>
-          </li>
           <li>
             <%= link_to "#" do %>
             <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
